fixed overflow

--- a/css/leon.css
+++ b/css/leon.css
@@ -23,7 +23,9 @@ html {
 }
 body {
   font-family: "Work Sans", sans-serif;
-  min-width: 400px;
+  /* min-width: 400px; */
+  width: 100vw;
+  height: 100%;
 }
 .container {
   padding-left: 15px;
@@ -468,7 +470,7 @@ body {
 }
 
 .contact-info {
-  width: 440px;
+  width: 300px;
   margin: 0 auto;
   text-align: center;
   line-height: 1.9;
